tests/checker/diagnostics/0871_gadt_constructor_payload_int_mismatch_02.ml.infer.expected
File "0871_gadt_constructor_payload_int_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0871_gadt_constructor_payload_int_mismatch_02 is not a valid module name.

File "0871_gadt_constructor_payload_int_mismatch_02.ml", line 5, characters 34-38:
5 | let _ : int expr_beta = EInt_beta true
                                      ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
